--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koishi-plugin-group-manage",
   "description": "Group Management Tools",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "files": [
@@ -27,11 +27,13 @@
     "url": "https://github.com/idanran"
   },
   "peerDependencies": {
-    "koishi": "^4.14.1"
+    "koishi": "^4.15.0"
   },
   "koishi": {
     "description": {
-      "zh": "群组管理工具，包含禁言、撤回消息等功能"
-    }
+      "zh": "群组管理工具，包含禁言、撤回消息、关键词检测等功能",
+      "en": "Group Management Tools"
+    },
+    "browser": true
   }
 }
