--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koishi-plugin-group-manage",
   "description": "Group Management Tools",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "files": [
@@ -16,16 +16,12 @@
     "group",
     "manage",
     "qqgroup",
-    "manager"
+    "manager",
+    "ban"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/idanran/koishi-plugin-group-manage.git"
-  },
-  "author": {
-    "email": "idanran@outlook.com",
-    "name": "idanran",
-    "url": "https://github.com/idanran"
+    "url": "https://github.com/idranme/koishi-plugin-group-manage.git"
   },
   "peerDependencies": {
     "koishi": "^4.15.2"
