--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,15 +3,20 @@
     "rootDir": "src",
     "outDir": "lib",
     "target": "es2022",
-    "module": "commonjs",
+    "module": "esnext",
     "declaration": true,
+    "emitDeclarationOnly": true,
     "composite": true,
     "incremental": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "jsx": "react-jsx",
     "jsxImportSource": "@satorijs/element",
+    "types": [
+      "node",
+      "yml-register/types"
+    ]
   },
   "include": [
     "src",
